fixes #181 - button height caused wrap issues and using a button was problemattic for item text as it won't wrap independently, so switched to a link with aria-label

--- a/app/styles/item.css
+++ b/app/styles/item.css
@@ -36,6 +36,11 @@
 	text-align: right;
 	float: left;
 }
+
+button.startTime.displayTime {
+	height: 15px;
+}
+
 .item .title {
 	margin-bottom: 0.5em;
 }
